# medical-chat-backend

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
data/: comment.txt  recommend.csv  report.txt
scripts/: start.sh  start_fixed.sh
src/ai/: config.py  logging.py  pipeline.py  requirements.txt
src/ai/kg/: answer.py  datasets.py  detector.py  labeldict.py  search.py  test.py
src/ai/kgqa/: answer.py  examples.py  search.py
src/ai/slu/: detector.py  labeldict.py  models.py  nlp.py
src/ai/slu/train/: datasets.py  extract_labels.py  tools.py
src/aiapp/: crud.py  main.py  models.py  requirements.txt  service.py
src/app/: init_data.py  main.py  requirements.txt
src/app/ai/kg/: answer.py
src/app/core/: config.py  security.py
src/app/crud/: __init__.py  base.py  crud_chat.py  crud_complaint.py  crud_feedback.py  crud_message.py  crud_recommend.py  crud_share.py  crud_user.py
src/app/db/: init_db.py  session.py  utils.py
src/app/models/: __init__.py  admin.py  answer.py  chat.py  complaint.py  feedback.py  message.py  note.py  page.py  question.py  recommendation.py  role_perm.py  shared_link.py  shared_user.py  user.py
src/app/routers/: api.py  deps.py
src/app/routers/endpoints/: chat.py  complaints.py  feedbacks.py  login.py  questions.py  recommends.py  share.py  users.py
src/app/service/: chat_service.py  complaint_service.py  feedback_service.py  question_service.py  recommend_service.py  share_service.py  user_service.py
src/app/utils/: futils.py  sqlutils.py  statutils.py
